--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Meme-Craft</title>
   </head>
-  <body>
+  <body onload="onInit()" onresize="renderMeme()">
     <header class="main-header">
       <h1 class="logo">Meme-Craft</h1>
       <nav class="main-nav"></nav>
@@ -14,10 +14,16 @@
 
     <main class="main-layout">
       <section class="gallery"></section>
-      <section class="editor"></section>
+      <section class="editor">
+        <div class="canvas-container">
+          <canvas width="" height=""> </canvas>
+        </div>
+      </section>
     </main>
 
     <script src="js/service/storage-service.js"></script>
     <script src="js/service/util-service.js"></script>
+    <script src="js/service/meme-service.js"></script>
+    <script src="js/meme-controller.js"></script>
   </body>
 </html>
