Add align buttons

--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
               src="icons/switch-line-icon.png"
               alt="Icon"
             />
+
+            <img
+              class="icon"
+              onclick="onSetLeftText()"
+              src="icons/left-text.icon.png"
+              alt="Icon"
+            />
+
+            <img
+              class="icon"
+              onclick="onSetCenterText()"
+              src="icons/center-text-icon.png"
+              alt="Icon"
+            />
+
+            <img
+              class="icon"
+              onclick="onSetRightText()"
+              src="icons/right-text-icon.png"
+              alt="Icon"
+            />
           </section>
 
           <section class="btn-container">
