--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Meme-Craft</title>
   </head>
-  <body onload="onInit()" onresize="renderMeme()">
+  <body onload="onInit()" onresize="onResize()">
     <header class="main-header flex align-center space-between">
       <h1 class="logo"><img src="icons/Logo.png" alt="logo" /></h1>
+
       <nav class="main-nav">
         <ul class="nav-list flex">
           <li onclick="onRenderGallery()" class="clean-list btn">Gallery</li>
@@ -18,6 +19,8 @@
           <li onclick="onRenderAbout()" class="clean-list btn">About</li>
         </ul>
       </nav>
+
+      <!-- <button class="btn-toggle-menu" onclick="toggleMenu()">☰</button> -->
     </header>
 
     <main class="main-layout">
