--- a/index.html
+++ b/index.html
@@ -199,8 +199,10 @@
       <h2>Contact</h2>
       <p>
         Have questions, feedback, or ideas? Reach out to us at contact
-        <a href="mailto:mika.ridley26@gmail.com">mika.ridley26@gmail.com</a> -
-        we’d love to hear from you!
+        <a class="email" href="mailto:mika.ridley26@gmail.com"
+          >mika.ridley26@gmail.com</a
+        >
+        - we’d love to hear from you!
       </p>
     </section>
 
