Fix text on resize

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
       </p>
     </section>
 
+    <div class="black-screen"></div>
+
     <script src="js/service/storage-service.js"></script>
     <script src="js/service/util-service.js"></script>
     <script src="js/service/meme-service.js"></script>
