--- a/index.html
+++ b/index.html
@@ -40,31 +40,16 @@
           </sections>
 
           <section class="icons-container">
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onDecreaseFont()"
-                src="icons/Smaller.png"
-                alt="Icon"
-              />
+            <div onclick="onDecreaseFont()" class="icon-cell">
+              <img class="icon" src="icons/Smaller.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onIncreaseFont()"
-                src="icons/Larger.png"
-                alt="Icon"
-              />
+            <div onclick="onIncreaseFont()" class="icon-cell">
+              <img class="icon" src="icons/Larger.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onAddLine()"
-                src="icons/Add.png"
-                alt="Icon"
-              />
+            <div onclick="onAddLine()" class="icon-cell">
+              <img class="icon" src="icons/Add.png" alt="Icon" />
             </div>
 
             <div class="icon-cell">
@@ -73,73 +58,38 @@
               /></label>
               <input
                 oninput="onChangeColor(this.value)"
-                class="opacity0"
+                class="opacity0 pointer"
                 id="color"
                 type="color"
               />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onSetLeftText()"
-                src="icons/Align Left.png"
-                alt="Icon"
-              />
+            <div onclick="onSetLeftText()" class="icon-cell">
+              <img class="icon" src="icons/Align Left.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onSetCenterText()"
-                src="icons/Align Centre.png"
-                alt="Icon"
-              />
+            <div onclick="onSetCenterText()" class="icon-cell">
+              <img class="icon" src="icons/Align Centre.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onSetRightText()"
-                src="icons/Align Right.png"
-                alt="Icon"
-              />
+            <div onclick="onSetRightText()" class="icon-cell">
+              <img class="icon" src="icons/Align Right.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onSwitchLine()"
-                src="icons/Select Next.png"
-                alt="Icon"
-              />
+            <div onclick="onSwitchLine()" class="icon-cell">
+              <img class="icon" src="icons/Select Next.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onMoveTextUp()"
-                src="icons/Move Up.png"
-                alt="Icon"
-              />
+            <div onclick="onMoveTextUp()" class="icon-cell">
+              <img class="icon" src="icons/Move Up.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onMoveTextDown()"
-                src="icons/Move Down.png"
-                alt="Icon"
-              />
+            <div onclick="onMoveTextDown()" class="icon-cell">
+              <img class="icon" src="icons/Move Down.png" alt="Icon" />
             </div>
 
-            <div class="icon-cell">
-              <img
-                class="icon"
-                onclick="onDeleteLine()"
-                src="icons/Delete.png"
-                alt="Icon"
-              />
+            <div onclick="onDeleteLine()" class="icon-cell">
+              <img class="icon" src="icons/Delete.png" alt="Icon" />
             </div>
           </section>
         </section>
