Add im flexible feature

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           />
           <datalist id="keywords"></datalist>
 
+          <button onclick="onFlexibleMeme()" class="btn flexible-btn">
+            I'm Flexible
+          </button>
+
           <div class="search-words"></div>
         </section>
 
@@ -233,7 +237,7 @@
 
     <script src="js/service/storage-service.js"></script>
     <script src="js/service/util-service.js"></script>
-    <script src="js/service/images-db.js"></script>
+    <script src="js/service/data-bases.js"></script>
     <script src="js/service/meme-service.js"></script>
     <script src="js/gallery-controller.js"></script>
     <script src="js/editor-controller.js"></script>
