Fix share buttons

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <button class="facebook-btn btn" type="submit">Facebook</button>
           </form>
 
-          <a href="#" class="btn save-btn" onclick="onOtherShare()">Save</a>
+          <a href="#" class="btn save-btn" onclick="onSaveMeme()">Save</a>
         </section>
       </section>
       <!-- ----------------------------------------------------------------------------------- -->
