Fix rotate title

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 class="icon"
                 src="icons/Select Next.png"
                 alt="Icon"
-                title="Move among lines"
+                title="Rotate text"
               />
             </div>
 
