Add switch line button

--- a/index.html
+++ b/index.html
@@ -166,27 +166,38 @@
             <div onclick="onRotateLine()" class="icon-cell">
               <img
                 class="icon"
-                src="icons/Select Next.png"
+                src="icons/Rotate.png"
                 alt="Icon"
                 title="Rotate text"
               />
             </div>
 
-            <div onclick="onMoveTextUp()" class="icon-cell">
-              <img
-                class="icon"
-                src="icons/Move Up.png"
-                alt="Icon"
-                title="Move text up"
-              />
+            <div class="up-down-btn">
+              <div onclick="onMoveTextUp()" class="icon-cell">
+                <img
+                  class="icon"
+                  src="icons/Move Up.png"
+                  alt="Icon"
+                  title="Move text up"
+                />
+              </div>
+
+              <div onclick="onMoveTextDown()" class="icon-cell">
+                <img
+                  class="icon"
+                  src="icons/Move Down.png"
+                  alt="Icon"
+                  title="Move text down"
+                />
+              </div>
             </div>
 
-            <div onclick="onMoveTextDown()" class="icon-cell">
+            <div onclick="onSwitchLine()" class="icon-cell">
               <img
                 class="icon"
-                src="icons/Move Down.png"
+                src="icons/Select Next.png"
                 alt="Icon"
-                title="Move text down"
+                title="Move among text"
               />
             </div>
 
