--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               />
             </div>
 
-            <div class="icon-cell">
+            <div class="color-icon icon-cell">
               <label for="color">
                 <img
                   class="icon"
